[gd_scene load_steps=3 format=3 uid="uid://cc8gwlkuuqnko"]

[ext_resource type="Script" path="res://scenes/mainmenu.gd" id="1_dnuib"]
[ext_resource type="AudioStream" uid="uid://c6mek1v4vndll" path="res://audio/low-spaceship-rumble-195722.mp3" id="2_subv7"]

[node name="mainmenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dnuib")

[node name="backround" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1500.0
offset_bottom = 755.0
color = Color(0.207843, 0.168627, 0.247059, 1)
metadata/_edit_lock_ = true

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="classic_button" type="Button" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "classic"

[node name="custom_button" type="Button" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "custom"

[node name="3D_button" type="Button" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "3D"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 1207.0
offset_top = 25.0
offset_right = 1476.0
offset_bottom = 91.0

[node name="Mastervolume" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
tooltip_text = "Mastervolume"
max_value = 2.0
step = 0.1
value = 1.0

[node name="Musicvolume" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
tooltip_text = "Musicvolume"
max_value = 2.0
step = 0.1
value = 1.0

[node name="SFXvolume" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
tooltip_text = "SFXvolume"
max_value = 2.0
step = 0.1
value = 1.0

[node name="backroundmusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_subv7")
volume_db = 20.613
autoplay = true
bus = &"music"

[connection signal="button_up" from="CenterContainer/HBoxContainer/classic_button" to="." method="_on_classic_button_button_up"]
[connection signal="button_up" from="CenterContainer/HBoxContainer/custom_button" to="." method="_on_custom_button_button_up"]
[connection signal="button_up" from="CenterContainer/HBoxContainer/3D_button" to="." method="_on_d_button_button_up"]
[connection signal="drag_ended" from="VBoxContainer/Mastervolume" to="." method="_on_mastervolume_drag_ended"]
[connection signal="drag_ended" from="VBoxContainer/Musicvolume" to="." method="_on_musicvolume_drag_ended"]
[connection signal="drag_ended" from="VBoxContainer/SFXvolume" to="." method="_on_sf_xvolume_drag_ended"]
